# utk-exodus

./: .gitignore  README.md  get_parents.py  header_finding.py  pyproject.toml  title_copy.py  unzip_and_merge.py
.github/workflows/: test.yml
tests/: test_checksum_checksum_file.py  test_metadata_data_provider.py  test_metadata_extents.py  test_metadata_geonames.py  test_metadata_keword.py  test_metadata_language.py  test_metadata_local_types.py  test_metadata_locations.py  test_metadata_machine_date.py  test_metadata_names.py  test_metadata_publication_place.py  test_metadata_publisher.py  test_metadata_rights_license.py  test_metadata_role_name.py  test_metadata_subject.py  test_metadata_titles.py  test_metadata_types_properties.py  test_restrict_dsids.py  test_restrict_find_users_with_access.py  test_restrict_get.py  test_restrict_is_work_restricted.py
tests/fixtures/: bass_10900_POLICY.xml  cdf_13238.xml  civilwar_1438.xml  colloquy_202.xml  covid_1.xml  egypt_224.xml  ekcd_50.xml  harp_1.xml  heilman1010.xml  heilman:1010.xml  hesler_10076.xml  knoxgardens_125.xml  playbills1052.xml  rfta_8_POLICY.xml  swim_162.xml  utsmc:725.xml  utsmc_17870.xml  voloh_10_POLICY.xml  volvoices_2136.xml  volvoices_2495.xml  volvoices_2993.xml  webster_1127.xml
utk_exodus/: __init__.py  exodus.py
utk_exodus/banish/: __init__.py  banish.py
utk_exodus/checksum/: __init__.py  checksum.py
utk_exodus/collection/: __init__.py  collection.py
utk_exodus/combine/: __init__.py  combine.py
utk_exodus/config/: samvera_default.yml  utk_dc.yml  utk_dc_no_uris.yml  (+1 more)
(+25 files in other folders)
