[tool.poetry]
name = "utk-exodus"
version = "0.1.0"
description = ""
authors = ["Mark Baggett <mbagget1@utk.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
lxml = "^5.2.1"
pyyaml = "^6.0.1"
xmltodict = "^0.13.0"
tqdm = "^4.66.2"
black = "^24.4.2"
ruff = "^0.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
