[tool.poetry]
name = "utk-exodus"
version = "0.1.3"
description = "A tool for building import sheets from UTK legacy systems"
authors = ["Mark Baggett <mbagget1@utk.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8 || ^3.9 || ^3.10 || ^3.11 || ^3.12"
requests = "^2.31.0"
lxml = "^5.2.1"
pyyaml = "^6.0.1"
xmltodict = "^0.13.0"
tqdm = "^4.66.2"
black = "^24.4.2"
ruff = "^0.4.2"
pytest = "^8.2.0"
click = "^8.1.7"

[tool.poetry.scripts]
exodus = "utk_exodus.exodus:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
